--- a/FINAL PORTFOLIO/assets/styles/about.css
+++ b/FINAL PORTFOLIO/assets/styles/about.css
@@ -1,37 +1,146 @@
-#Aboutme {
-    position: absolute;
+
+#about{
+   height: 100vh;
+}
+.about {
+    padding: 40px;
+    color: #fff;
+    text-align: center;
+  }
+  
+  .about h2 {
+    margin-bottom: 70px;
+    font-size: 26px;
+    letter-spacing: 2px;
+    margin-left: 100px;
+  }
+  
+  /* Layout */
+  .container {
     display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    max-width: 1300px;
+    margin: 0 auto;
+    gap: 40px;
+
+  }
+  
+  
+  .skills {
+    width: 35%;
+    text-align: left;
+  }
+  
+  .skills h3 {
+    margin-bottom: 12px;
+    font-size: 20px;
+  }
+  
+  .skills ul {
+    list-style-type: disc;
+    padding-left: 20px;
+    margin-bottom: 25px;
+  }
+  
+  .skills ul li {
+    margin-bottom: 10px;
+    font-size: 16px;
+  }
+  
+  
+  .icons {
+    display: flex;
+    justify-content: flex-start;
+    gap: 25px;
+    flex-wrap: wrap;
+  }
+  
+  .icon {
+    text-align: center;
+    color: #fff;
+    font-weight: bold;
+  }
+  
+  .circle {
+    width: 90px;
+    height: 90px;
+    border-radius: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
-    gap: 80px;
-    font-family: 'Times New Roman', Times, serif;
-}
+  }
+  
+  .icon img {
+    width: 40px;
+    height: auto;
+    margin-bottom: 5px;
+  }
+  
+  .icon p {
+    font-size: 14px;
+    margin: 0;
+  }
+  
+  .html {
+    background: #e44d26;
+  }
+  
+  .css {
+    background: #264de4;
+  }
+  
+  .figma {
+    background: #0acf83;
+  }
+  
+  .js {
+    background: #f7df1e;
+    color: #070505; 
+  }
+  
+  
+  .about-text {
+    width: 50%;
+    height: 150%;
+    background:#ffff;
+    color: #0a0a0a;
+    padding: 25px;
+    border-radius: 15px 60px 15px 15px;
+    text-align: left;
+    line-height: 1.6;
+    font-size: 16px;
+  }
+  .about-text p , strong , b ,em{
+    color:#070505;
+    background-color: #fff;
+    
 
-.about { 
-    background: rgba(130, 28, 28, 0.84);
-     padding: 40px;
-
-
-} .about-container { 
-    display: flex; gap: 30px; 
-} 
-
-.skills ul {
-     list-style: none;
-      padding: 0;
- }
- 
- .icons img {
-     width: 40px; margin: 5px; 
- }
- .about-text .text-box {
-    background: white;
-    color: black;
-    padding: 20px;
-    border-radius: 15px;
-    max-width: 500px;
-}
-
-.about-text p {
-    margin-bottom: 15px;
-    line-height: 1.5;
-}
+    
+  }
+  
+  .about-text em {
+    font-style: italic;
+  }
+  
+  .about-text strong {
+    font-weight: bold;
+  }
+  
+  /* Responsive */
+  @media (max-width: 900px) {
+    .container {
+      flex-direction: column;
+      align-items: center;
+    }
+  
+    .skills, .about-text {
+      width: 100%;
+    }
+  
+    .icons {
+      justify-content: center;
+    }
+  }
+  
