--- a/FINAL PORTFOLIO/assets/styles/contact.css
+++ b/FINAL PORTFOLIO/assets/styles/contact.css
@@ -1,38 +1,105 @@
-#contact {
-    height: 100%;
-    padding: 72px 20px;
-    border: 50%;
-  }
-
-  #contact form:hover {
-    transform: scale(1.02);
-    transition: all ease 1s;
-  }
-.contact {
-     background: #a52a2a;
-      padding: 40px;
-     } 
 
 
 .contact-container {
-    display: flex; 
-    gap: 30px;
-    flex-direction: row;
-    gap: 24px;
-    color: white;
-    border:30%;
-} 
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 50px;
+  padding: 50px;
+}
 
-form input, form textarea, form button {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 10px;
-    } 
-     
-     
-form button {
-    background: white;
-    color: #800000; 
-    font-weight: bold;
-    cursor: pointer; 
-    }
+.contact-left {
+  max-width: 400px;
+}
+
+.contact-left h2 {
+  text-align: left;
+  margin-bottom: 15px;
+}
+
+.btn-connect {
+  background: white;
+  color: #b30000;
+  padding: 8px 20px;
+  border-radius: 20px;
+  display: inline-block;
+  font-weight: bold;
+  margin-bottom: 20px;
+  cursor: pointer;
+  border: none;
+}
+
+.contact-left p {
+  margin-bottom: 15px;
+  line-height: 1.6;
+}
+
+.contact-info {
+  margin-top: 20px;
+}
+
+.contact-info div {
+  display: flex;
+  align-items: center;
+  margin: 10px 0;
+}
+
+.contact-info img {
+  width: 30px;
+  height: 30px;
+  margin-right: 10px;
+}
+
+
+.contact-right {
+  padding: 30px;
+  border-radius: 20px;
+  box-shadow: 10px 10px 10px rgba(4,4,4,0.4);
+  width: 350px;
+  height: 130%;
+  width: 30%;
+  border: 1px solid black;
+}
+
+.contact-right label {
+  display: block;
+  margin: 15px 0 5px;
+  font-weight: bold;
+}
+
+.contact-right input,
+.contact-right textarea {
+  width: 100%;
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  margin-bottom: 10px;
+  border: 2px solid #ccc;
+  background-color: #fff;
+  color:black;
+}
+
+.contact-right textarea {
+  height: 100px;
+  resize: none;
+}
+
+.contact-right button {
+  background: white;
+  color: black;
+  padding: 10px 25px;
+  border: none;
+  border-radius: 20px;
+  font-weight: bold;
+  cursor: pointer;
+  display: block;
+  margin: auto;
+}
+
+.contact-right button:hover {
+  background: #e2e2e2;
+}
+
+h1, h2 {
+  text-align: center;
+}
