--- a/FINAL PORTFOLIO/assets/styles/contact.css
+++ b/FINAL PORTFOLIO/assets/styles/contact.css
@@ -54,11 +54,11 @@
 .contact-right {
   padding: 30px;
   border-radius: 20px;
-  box-shadow: 10px 10px 10px rgba(4,4,4,0.4);
+  box-shadow: 0 0 40px rgba(4,4,4,5);
   width: 350px;
   height: 130%;
   width: 30%;
-  border: 1px solid black;
+
 }
 
 .contact-right label {
@@ -84,20 +84,22 @@
   resize: none;
 }
 
-.contact-right button {
+.contact-right .btn {
   background: white;
   color: black;
-  padding: 10px 25px;
+  padding: 10px 30px;
   border: none;
-  border-radius: 20px;
+  border-radius: 15px;
   font-weight: bold;
   cursor: pointer;
   display: block;
   margin: auto;
+  text-align: center;
 }
 
-.contact-right button:hover {
-  background: #e2e2e2;
+.contact-right .btn:hover {
+  background: red;
+  color: white;
 }
 
 h1, h2 {
