--- a/FINAL PORTFOLIO/assets/styles/project.css
+++ b/FINAL PORTFOLIO/assets/styles/project.css
@@ -20,4 +20,6 @@
  } 
  .projects h2 , p {
     margin-bottom: 50px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    color: #fff;
  }
