--- a/FINAL PORTFOLIO/assets/styles/footer.css
+++ b/FINAL PORTFOLIO/assets/styles/footer.css
@@ -1,3 +1,8 @@
 footer {
-   text-align: center;
-     }
+    background: #800000;
+    text-align: center;
+    padding: 7px;
+    font: 50px;
+  }
+     
+  
