--- a/FINAL PORTFOLIO/assets/styles/navbar.css
+++ b/FINAL PORTFOLIO/assets/styles/navbar.css
@@ -1,6 +1,6 @@
 a {
-    color: rgba(217, 66, 66, 1);
     text-decoration: none;
+    color: white;
 }
 
 .navbar {
@@ -26,6 +26,7 @@ a {
         opacity: 1;
     }
 }
+
 .navbar .logo {
     font-size: 30px;
     font-weight: 600;
@@ -44,6 +45,11 @@ a {
     font-size: 20px;
     font-weight: 400; 
     transition: .5;
-   
-   
+    color:white;  
+}
+
+.navbar ul li a:hover {
+    color:#F62817;
+    transform: scale(1.5s);
+    transition: all ease 0.8s;
 }
