--- a/FINAL PORTFOLIO/assets/styles/about.css
+++ b/FINAL PORTFOLIO/assets/styles/about.css
@@ -9,13 +9,20 @@
   }
   
   .about h2 {
-    margin-bottom: 70px;
-    font-size: 26px;
-    letter-spacing: 2px;
-    margin-left: 100px;
+    margin-bottom: 50px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
     color: #800000;
   }
   
+  .about-img img {
+   overflow: hidden;
+   filter: blur(1px);
+   max-width: 350px;
+   max-height: fit-content;
+   border-radius: 10px;
+   box-shadow:  0 0 15px 5px #800000;
+   border: 5px solid #800000;
+  }
 
   .container {
     display: flex;
@@ -60,7 +67,7 @@
   
   .icon {
     text-align: center;
-    color: #fff;
+    color: #000000;
     font-weight: bold;
   }
   
@@ -72,41 +79,31 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-left: 20px;
   }
   
   .icon img {
     width: 40px;
     height: auto;
     margin-bottom: 5px;
+    aspect-ratio: 4/3;
+    object-fit: contain;
+    mix-blend-mode: color-burn;
+
   }
   
   .icon p {
     font-size: 14px;
     margin: 0;
+    color: #000000;
   }
   
-  .html {
-    background: #e44d26;
-  }
   
-  .css {
-    background: #264de4;
-  }
-  
-  .figma {
-    background: #0acf83;
-  }
-  
-  .js {
-    background: #f7df1e;
-    color: #070505; 
-  }
   
   
   .about-text {
     width: 50%;
     height: 150%;
-    background:#ffff;
     color: #0a0a0a;
     padding: 25px;
     border-radius: 15px 60px 15px 15px;
@@ -116,13 +113,17 @@
   }
 
   .about-text p , strong , b ,em{
-    color:#070505;
-    background-color: #fff;
+    color:#000000;
     align-items: center;   
+  }
+  .about-text h3{
+text-align: center;
+margin-bottom: 5%;
   }
   
   .about-text em {
     font-style: italic;
+    text-align: center;
   }
   
   .about-text strong {
