--- a/FINAL PORTFOLIO/assets/styles/contact.css
+++ b/FINAL PORTFOLIO/assets/styles/contact.css
@@ -4,6 +4,7 @@
   background: #a52a2a;
   padding: 80px;
   position: absolute;
+  max-height: fit-content;
 }
 .contact h1{
   color: #800000;
@@ -124,3 +125,5 @@ h1, h2 {
   text-align: center;
   color: #800000;
 }
+
+  
