--- a/FINAL PORTFOLIO/assets/styles/navbar.css
+++ b/FINAL PORTFOLIO/assets/styles/navbar.css
@@ -17,6 +17,9 @@ a {
     opacity: 0;
     animation: show-content 1.5s linear forwards;
     animation-delay: 1.4s;
+    backdrop-filter: blur(10px);
+    box-shadow: 0 0 30px black;
+    border: 1px;
 
 }
 
@@ -30,6 +33,9 @@ a {
 .navbar .logo {
     font-size: 30px;
     font-weight: 600;
+    color: #ffffff;
+    text-shadow: 2px 2px 5px black, -2px -2px 5px gray;
+    font-style: italic;
 }
 
 .navbar ul {
@@ -43,9 +49,12 @@ a {
 
 .navbar ul li a {
     font-size: 20px;
+    font-family:Arial, Helvetica, sans-serif
+    font-style: normal;
     font-weight: 400; 
     transition: .5;
-    color:white;  
+    color:#ffffff;
+    text-shadow: 2px 2px 5px black, -2px -2px 5px gray;
 }
 
 .navbar ul li a:hover {
