--- a/FINAL PORTFOLIO/assets/styles/style.css
+++ b/FINAL PORTFOLIO/assets/styles/style.css
@@ -18,3 +18,25 @@
     font-family: Georgia, 'Times New Roman', Times, serif;
     color: #030202; 
 }
+
+/* Responsive */
+@media (max-width: 768px) {
+    body {
+      font-size: 16px;
+    }
+  }
+@media (max-width: 992px) {
+    body {
+      font-size: 17px;
+    }
+  }
+@media (max-width: 1200px) {
+    body {
+      font-size: 18px;
+    }
+  }
+ @media (min-width: 1201px) {
+    body {
+      font-size: 20px;
+    }
+  }
