--- a/FINAL PORTFOLIO/assets/styles/navbar.css
+++ b/FINAL PORTFOLIO/assets/styles/navbar.css
@@ -49,7 +49,7 @@ a {
 
 .navbar ul li a {
     font-size: 20px;
-    font-family:Arial, Helvetica, sans-serif
+    font-family:Arial, Helvetica, sans-serif;
     font-style: normal;
     font-weight: 400; 
     transition: .5;
